--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-docx==1.1.0
 openai==0.12.6
 langchain==0.1.0
 faiss-cpu==1.7.4
+pip install streamlit-authenticator==0.1.5
 csv
 fastapi
 python-multipart
