--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     image: ollama/ollama
     container_name: ollama
     ports:
-      - "11434:11434"
+      - "11435:11435"
     volumes:
       - ollama:/root/.ollama
     deploy:
@@ -42,12 +42,12 @@ services:
     image: laamps_simulation  
     container_name: laamps
     ports:
-     - "3000:3000"
-    volumes:
-      - laamps:/root/.laamps
+     - "3005:3005"
+  
 
   
 
   
 volumes:
   weaviate_data:
+  ollama:
