--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ streamlit==1.5.0
 python-dotenv==0.19.1
 PyPDF2==1.26.0
 python-docx==1.1.0
-openai==0.12.6
+openai
 langchain==0.1.0
 faiss-cpu==1.7.4
 csv
@@ -12,3 +12,4 @@ fastapi
 python-multipart
 weaviate
 ollama
+unicorn
