--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,8 @@ PyPDF2==1.26.0
 python-docx==1.1.0
 openai
 langchain==0.1.0
-faiss-cpu==1.7.4
 fastapi
 python-multipart
 weaviate-client
 ollama
-unicorn
+uvicorn
