--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,11 @@ python-dotenv==0.19.1
 PyPDF2==1.26.0
 python-docx==1.1.0
 openai
-openai
 langchain==0.1.0
 fastapi
 python-multipart
-weaviate-client
+weaviate-client==4.*
 ollama
 uvicorn
+beautifulsoup4
+nltk
